<resources>
    <string name="app_name">SinghNicerShop</string>
    <string name="pendant">Pendant</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="sarbloh_karra">Sarbloh Karra</string>
    <string name="priceKarraStr">$25.00</string>
    <string name="kirpan">Kirpan</string>
    <string name="priceKirpanStr">$100.00</string>
    <string name="pricePendant">$20.00</string>
    <string name="library">Library</string>
    <string name="proceed_to_checkout">Proceed To Checkout</string>
    <string name="welcome_to_sikhaccesories">Welcome to SikhAccesories</string>
    <string name="welcomeDesc">We specilize in Accesories that sikhs use on a daily basis</string>
    <string name="start_shopping">Start Shopping</string>
    <string name="before_tax">Before Tax:</string>
    <string name="gst_tax">GST Tax:</string>
    <string name="qst_tax">QST Tax:</string>
    <string name="final_amount">Final Amount:</string>
    <string name="thank_you">Thank You For Your Visiting SikhAccesories</string>
    <string name="checkout">Checkout</string>
    <string name="defaultNum">0</string>
    <string name="descKarra">Karra is the Punjabi word for a metal bangle worn by Sikh males and females. Sarblow is a word that mean full metal</string>
    <string name="totalStr">Total:</string>
    <string name="subtotalStr">Subtotal:</string>
    <string name="descriptionKirpan">Kirpan is a small dagger worn by baptised Sikh men and women. This particle kirpan is personized with a matt black finish.</string>
    <string name="descriptionPendant">This Pendant is not a religious item. It is an ornament wit the chrest of the Khalsa.The chain s ajustible</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="shippingcost">ShippingCost</string>
    <string name="montreal_location">Montreal Location</string>
    <string name="toronto_location">Toronto Location</string>
    <string name="vancouver_location">Vancouver Location</string>

    <string name="titleBaj">Baj</string>
    <string name="descBaj">A baj is a metal stick used to tuck in loose hair for turban tyers.</string>
    <string name="priceBaj">$5.00</string>

    <string name="titlefiftee">Fiftee</string>
    <string name="descfiftee">A fiftee is a strip of cloth worn under turbans.</string>
    <string name="pricefiftee">$5.00</string>






    <string name="titlewax">Moustash Wax</string>
    <string name="descwax">This wax is used to control your frizzy moustash.</string>
    <string name="pricewax">$5.00</string>

    <string name="titlecomb">Wooden Comb</string>
    <string name="desccomb">All baptized sikhs are required to have a comb on them at all times.</string>
    <string name="pricecomb">$9.00</string>

    <string name="titlechola">Blue Chola</string>
    <string name="descchola">A Chola is a traditional sikh atire.</string>
    <string name="pricechola">$45.00</string>

    <string name="titlegatra">Gatra</string>
    <string name="descgatra">Gatra is like a holster for your kirpan.</string>
    <string name="pricegatra">$25.00</string>

    <string name="titlejutti">Jutti</string>
    <string name="descjutti">This is a tradition indain foot attire.</string>
    <string name="pricejutti">$35.00</string>
</resources>